Added activity WordSearch and few changes in Grid and Cell

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hg</name>
+	<name>sugar-clic</name>
 	<comment>Cloned from https://sugar-clic.googlecode.com/hg/</comment>
 	<projects>
 	</projects>
